# norma-core

./: .gitignore  Cargo.toml  GRAVITY_COMPENSATION.md  ROBOTDOG.md
.github/: dependabot.yml
.github/workflows/: station-app-pr-check.yml  station-release.yml  station-viewer-pr-check.yml
device-support/arduino-portenta-x8/yocto/: README.md
device-support/arduino-portenta-x8/yocto/meta-normacore-x8/conf/: layer.conf
device-support/arduino-portenta-x8/yocto/meta-normacore-x8/recipes-connectivity/openssh/: openssh_%.bbappend
hardware/elrobot/: README.md
hardware/elrobot/STEP/case_for_waveshare/: ws_enclosure_case.stp
hardware/elrobot/STL/case_for_waveshare/: ws_enclosure_case.stl
hardware/elrobot/STL/elrobot_follower/: panels.stl
hardware/elrobot/print/ams/: elrobot_follower_ams.3mf  elrobot_full_ams.3mf  elrobot_full_ams_dual.3mf  enclosure_for_waveshare_ams.3mf
hardware/elrobot/print/basic/: elrobot_full_basic.3mf  enclosure_for_waveshare_basic.3mf
hardware/pgripper/STEP/individual/: Wiring_bracket.stp
hardware/pgripper/STL/individual/: Wiring_bracket.stl
hardware/pgripper/STL/print/: ams.3mf  basic.3mf  gripper_27mm_camera_mount.stl  gripper_34mm_camera_mount.stl  gripper_generic_camera_mount.stl  gripper_no_camera_mount.stl
protobufs/drivers/motors-mirroring/: mirroring.proto
protobufs/drivers/yahboom-dogzilla-lite/: yahboom_dogzilla_lite.proto
protobufs/station/: drivers.proto
shared/libcamera/: Dockerfile  Makefile  build.sh
shared/libcamera-sys-static/: Cargo.toml  build.rs  wrapper.cpp  wrapper.hpp
software/ai/smolvla_py/: LICENSE.md  README.md  nebius.md  pyproject.toml
software/ai/smolvla_py/scripts/: build_bundle.sh  merge_datasets.py  run_policy.py  train.py
software/ai/smolvla_py/smolvla/: __init__.py  config.py  dataset.py  flow_matching.py  normalize.py  policy.py  smolvlm_with_expert.py  stats.py  utils.py
software/drivers/inferences/: Cargo.toml  build.rs
software/drivers/inferences/src/: lib.rs
software/drivers/inferences/src/formats/: mod.rs  normvla.rs  yahboom_dogzilla_lite.rs
software/drivers/motors-mirroring/src/: config.rs  lib.rs  types.rs
software/drivers/motors-mirroring/src/gravity_comp/: CLAUDE.md  control.rs  elrobot_dynamics.rs  kinematics.rs  mod.rs
software/drivers/motors-mirroring/src/inference/: mirror.rs  mod.rs  model.rs
software/drivers/ov5647/: Cargo.toml
software/drivers/ov5647/src/: buffer.rs  camera.rs  capture.rs  config.rs  error.rs  format.rs  lib.rs  pipeline.rs  state.rs
software/drivers/ov5647/src/frame2tensor/: jpeg.rs  mod.rs
software/drivers/st3215/src/: port.rs  port_meta.rs
software/drivers/yahboom-dogzilla-lite/: Cargo.toml  build.rs
software/drivers/yahboom-dogzilla-lite/src/: command_inbox.rs  driver.rs  errors.rs  lib.rs  port.rs  protocol.rs  shared.rs  sim.rs  state.rs
software/station/clients/station-app/: .gitignore  .npmrc  AGENTS.md  README.md  electron-builder.yml  package-lock.json  package.json  tsconfig.json
software/station/clients/station-app/scripts/: generate-version.mjs
software/station/clients/station-app/src/: main.ts  preload.ts  types.d.ts
software/station/clients/station-viewer/: AGENTS.md  README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
software/station/clients/station-viewer/scripts/: protobuf.sh
software/station/clients/station-viewer/src/: App.tsx  assets-manifest.json  desktop.d.ts
software/station/clients/station-viewer/src/api/: commands.ts  frame-parser.ts  (+4 more)
software/station/examples/local/: connect.py
software/station/examples/local/webviewer/: README.md  index.html  normfs.proto  st3215.proto
software/station/examples/st3215-calibration-dump-py/: README.md  main.py  pyproject.toml
software/station/examples/st3215-remote-teleop-py/: README.md  commands.py  config.py  main.py  mirror.py  pyproject.toml  state.py
software/station/examples/yahboom-dogzilla-lite-monitor/: README.md  pyproject.toml
software/station/examples/yahboom-dogzilla-lite-monitor/src/yahboom_dogzilla_lite_monitor/: app.py  display.py  main.py  render.py  station_state.py  station_tcp.py  system_state.py
software/station/examples/yahboom-dogzilla-lite-monitor/tests/: test_display.py  test_station_state.py  test_system_state.py
software/station/shared/station-iface/src/: config.rs
(+87 files in other folders)
