[project]
name = "yahboom-dogzilla-lite-monitor"
version = "0.1.0"
description = "Raspberry Pi Yahboom Dogzilla Lite monitor"
requires-python = ">=3.11,<3.12"
dependencies = [
    "pillow>=10",
]

[project.scripts]
yahboom-dogzilla-lite-monitor = "yahboom_dogzilla_lite_monitor.main:main"

[dependency-groups]
dev = [
    "mypy>=1.18",
    "ruff>=0.14",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "yahboom_dogzilla_lite_monitor"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
